feat(auth): implement comprehensive authentication system with JWT
- Add secure user authentication with email/password login using bcrypt
- Implement JWT token management with automatic refresh and secure storage
- Create protected routes and authentication components for frontend
- Update backend with CORS, database migration, and API versioning (/v1)
- Modify extension to use email/password authentication instead of OAuth
- Add extensive test coverage for authentication flows
- Update Docker configurations for development environment

BREAKING CHANGE: Authentication API endpoints changed from /api to /v1, and login method switched from OAuth to email/password

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -23,18 +23,29 @@
     </style>
   </head>
   <body>
-    <h3>Save to Booky</h3>
-    <label>Title: <input id="title" type="text" /></label>
-    <label>Notes: <textarea id="notes"></textarea></label>
-    <label
-      >Collection:
-      <select id="collection">
-        <option value="">Select Collection</option>
-      </select></label
-    >
-    <button id="saveBookmark">Save Bookmark</button>
-    <button id="saveHighlight">Save Highlight</button>
-    <button id="login">Login</button>
+    <div id="loginForm">
+      <h3>Login to Booky</h3>
+      <label>Email: <input id="email" type="email" /></label>
+      <label>Password: <input id="password" type="password" /></label>
+      <button id="loginBtn">Login</button>
+      <div id="loginError" style="color: red; display: none;"></div>
+    </div>
+
+    <div id="bookmarkForm" style="display: none;">
+      <h3>Save to Booky</h3>
+      <label>Title: <input id="title" type="text" /></label>
+      <label>Notes: <textarea id="notes"></textarea></label>
+      <label
+        >Collection:
+        <select id="collection">
+          <option value="">Select Collection</option>
+        </select></label
+      >
+      <button id="saveBookmark">Save Bookmark</button>
+      <button id="saveHighlight">Save Highlight</button>
+      <button id="logoutBtn">Logout</button>
+    </div>
+
     <script src="popup.js"></script>
   </body>
 </html>
